fix IT with syntax 21
Signed-off-by: xinyual <xinyual@amazon.com>